--- a/spring/appspec.yml
+++ b/spring/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/KickOff # 프로젝트 이름
+    destination: /home/ubuntu/Whistle 프로젝트 이름
     overwrite: yes
 
 permissions:
