--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,15 +39,15 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+        run: chmod +x ./spring/gradlew
         shell: bash
         
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./spring/gradlew build
         shell: bash
         
       - name: Make zip file
-        run: zip -r ./Whistle.zip .
+        run: zip -r ./spring/Whistle.zip .
         shell: bash
           
       - name: Configure AWS credentials
