--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,7 +58,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
           
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./Whistle.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/Whistle.zip
+        run: aws s3 cp --region ap-northeast-2 ./spring/Whistle.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/Whistle.zip
 
       - name: Code Deploy
         run: aws deploy create-deployment --application-name Whistle --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name Whistle --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/Whistle.zip
