--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,7 +43,9 @@ jobs:
         shell: bash
         
       - name: Build with Gradle
-        run: ./spring/gradlew build
+        run: |
+          ./gradlew clean    # Clean existing build artifacts
+          ./gradlew build
         shell: bash
         
       - name: Make zip file
