--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,10 @@ spring:
       properties:
         hibernate.use_sql_comments: true
         hibernate.format_sql: true
-
+  security:
+    user:
+      name: user
+      password: 1234
 jwt:
   secretKey: secret
   issuer: ehjeong
