[EHJEONG][JASYPT 암호화]

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 jasypt:
   encryptor:
     bean: jasyptStringEncryptor
-    password: "#{systemProperties['JASYPT_PASSWORD']}"
+    password: ${JASYPT_PASSWORD}
 
 spring:
   datasource:
