--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ jasypt:
   encryptor:
     bean: jasyptStringEncryptor
     password: ${JASYPT_PASSWORD}
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
 
 spring:
   datasource:
