--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 jasypt:
   encryptor:
     bean: jasyptStringEncryptor
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
+    algorithm: PBEWithMD5AndDES
     password: ${JASYPT_PASSWORD}
 
 spring:
